--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@ h1 {
   text-align: center;
   text-decoration: underline;
   font-family: serif;
+  background-color: rgba(76, 167, 84, 0.4);
+  font-size: 2em;
+  border: solid black 2px;
+  border-radius: 5px;
 }
 
 h2 {
@@ -11,10 +15,8 @@ h2 {
 }
 
 ul {
-  background-color: red;
 }
 
 li {
   font-size: 1.5em;
-  color: green;
 }
